# AISD_4sem_Lab3

./: .gitignore  4_sem_Lab3.cpp  CMakeLists.txt
libraries/: 4_sem_Lab3_lib.h
src/: 4_sem_Lab3_lib.cc
